--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,12 +28,12 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/pbo_project1.jar
+dist.jar=${dist.dir}/KaraokeApp.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/pbo_project1
+dist.jlink.output=${dist.jlink.dir}/KaraokeApp
 excludes=
-file.reference.gson-2.8.2.jar=C:\\Development\\jar_files\\gson-2.8.2.jar
+file.reference.gson-2.8.2.jar=../../../../../Development/jar_files/gson-2.8.2.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -73,8 +73,8 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=pbo_project1
-main.class=pbo_project1.Pbo_project1
+jlink.launcher.name=KaraokeApp
+main.class=Main.Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
