--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -34,11 +34,17 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/KaraokeApp
 excludes=
 file.reference.gson-2.8.2.jar=../../../../../Development/jar_files/gson-2.8.2.jar
+file.reference.jl1.0.jar=D:\\programming\\PBO\\proj\\MusicPlayer-master\\lib\\jl1.0.jar
+file.reference.KGradientPanel.jar=D:\\programming\\PBO\\proj\\MusicPlayer-master\\lib\\KGradientPanel.jar
+file.reference.mp3agic-0.9.1.jar=D:\\programming\\PBO\\proj\\MusicPlayer-master\\lib\\mp3agic-0.9.1.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
-    ${file.reference.gson-2.8.2.jar}
+    ${file.reference.gson-2.8.2.jar}:\
+    ${file.reference.KGradientPanel.jar}:\
+    ${file.reference.jl1.0.jar}:\
+    ${file.reference.mp3agic-0.9.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
