--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,6 +35,7 @@ dist.jlink.output=${dist.jlink.dir}/KaraokeApp
 excludes=
 file.reference.gson-2.8.2.jar=../../../../../Development/jar_files/gson-2.8.2.jar
 file.reference.jl1.0.jar=D:\\programming\\PBO\\proj\\MusicPlayer-master\\lib\\jl1.0.jar
+file.reference.KaraokeApp-lib=lib
 file.reference.KGradientPanel.jar=D:\\programming\\PBO\\proj\\MusicPlayer-master\\lib\\KGradientPanel.jar
 file.reference.mp3agic-0.9.1.jar=D:\\programming\\PBO\\proj\\MusicPlayer-master\\lib\\mp3agic-0.9.1.jar
 includes=**
@@ -44,7 +45,8 @@ javac.classpath=\
     ${file.reference.gson-2.8.2.jar}:\
     ${file.reference.KGradientPanel.jar}:\
     ${file.reference.jl1.0.jar}:\
-    ${file.reference.mp3agic-0.9.1.jar}
+    ${file.reference.mp3agic-0.9.1.jar}:\
+    ${file.reference.KaraokeApp-lib}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
