--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=KaraokeApp
+application.vendor=LENOVO
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -32,12 +33,12 @@ dist.jar=${dist.dir}/KaraokeApp.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/KaraokeApp
+endorsed.classpath=
 excludes=
-file.reference.gson-2.8.2.jar=../../../../../Development/jar_files/gson-2.8.2.jar
-file.reference.jl1.0.jar=D:\\programming\\PBO\\proj\\MusicPlayer-master\\lib\\jl1.0.jar
-file.reference.KaraokeApp-lib=lib
-file.reference.KGradientPanel.jar=D:\\programming\\PBO\\proj\\MusicPlayer-master\\lib\\KGradientPanel.jar
-file.reference.mp3agic-0.9.1.jar=D:\\programming\\PBO\\proj\\MusicPlayer-master\\lib\\mp3agic-0.9.1.jar
+file.reference.gson-2.8.2.jar=lib/gson-2.8.2.jar
+file.reference.jl1.0.jar=lib/jl1.0.jar
+file.reference.KGradientPanel.jar=lib/KGradientPanel.jar
+file.reference.mp3agic-0.9.1.jar=lib/mp3agic-0.9.1.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -45,8 +46,7 @@ javac.classpath=\
     ${file.reference.gson-2.8.2.jar}:\
     ${file.reference.KGradientPanel.jar}:\
     ${file.reference.jl1.0.jar}:\
-    ${file.reference.mp3agic-0.9.1.jar}:\
-    ${file.reference.KaraokeApp-lib}
+    ${file.reference.mp3agic-0.9.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
