--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,6 +36,9 @@ dist.jlink.output=${dist.jlink.dir}/KaraokeApp
 endorsed.classpath=
 excludes=
 file.reference.gson-2.8.2.jar=lib/gson-2.8.2.jar
+file.reference.jackson-annotations-2.16.0.jar=lib/jackson-annotations-2.16.0.jar
+file.reference.jackson-core-2.16.0.jar=lib/jackson-core-2.16.0.jar
+file.reference.jackson-databind-2.16.0.jar=lib/jackson-databind-2.16.0.jar
 file.reference.jl1.0.jar=lib/jl1.0.jar
 file.reference.KGradientPanel.jar=lib/KGradientPanel.jar
 file.reference.mp3agic-0.9.1.jar=lib/mp3agic-0.9.1.jar
@@ -46,7 +49,10 @@ javac.classpath=\
     ${file.reference.gson-2.8.2.jar}:\
     ${file.reference.KGradientPanel.jar}:\
     ${file.reference.jl1.0.jar}:\
-    ${file.reference.mp3agic-0.9.1.jar}
+    ${file.reference.mp3agic-0.9.1.jar}:\
+    ${file.reference.jackson-databind-2.16.0.jar}:\
+    ${file.reference.jackson-annotations-2.16.0.jar}:\
+    ${file.reference.jackson-core-2.16.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
