--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -39,8 +39,6 @@ file.reference.gson-2.8.2.jar=lib/gson-2.8.2.jar
 file.reference.jl1.0.jar=lib/jl1.0.jar
 file.reference.KGradientPanel.jar=lib/KGradientPanel.jar
 file.reference.mp3agic-0.9.1.jar=lib/mp3agic-0.9.1.jar
-file.reference.org-jdesktop-swingx-1.6-201002261215.jar=lib/org-jdesktop-swingx-1.6-201002261215.jar
-file.reference.swingx-1.6.jar=lib\\swingx-1.6.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -48,9 +46,7 @@ javac.classpath=\
     ${file.reference.gson-2.8.2.jar}:\
     ${file.reference.KGradientPanel.jar}:\
     ${file.reference.jl1.0.jar}:\
-    ${file.reference.mp3agic-0.9.1.jar}:\
-    ${file.reference.org-jdesktop-swingx-1.6-201002261215.jar}:\
-    ${file.reference.swingx-1.6.jar}
+    ${file.reference.mp3agic-0.9.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
