--- a/build.xml
+++ b/build.xml
@@ -10,81 +10,21 @@
 <project name="KaraokeApp" default="default" basedir=".">
     <description>Builds, tests, and runs the project KaraokeApp.</description>
     <import file="nbproject/build-impl.xml"/>
-    
-    <!-- Add a new path element for library JAR files -->
-    <path id="lib.classpath">
-        <fileset dir="lib" includes="*.jar"/>
-    </path>
+   
 
-    <!-- Override the -post-init target to add the library classpath -->
-    <target name="-post-init">
-        <!-- Display a message -->
-        <echo message="Adding JAR files from lib/ to classpath"/>
-
-        <!-- Add the JAR files to the project classpath -->
-        <pathconvert property="javac.classpath" refid="lib.classpath"/>
-        <propertyfile file="${build.classes.dir}/build.properties">
-            <entry key="javac.classpath" value="${javac.classpath}"/>
-        </propertyfile>
+    <target name="-post-jar" depends="run">
+        <echo>Copying additional files</echo>
+        <copy todir="${dist.dir}/view/images">
+            <fileset dir="${basedir}/src/view/images"/>
+            <fileset dir="${basedir}/src/view/images/animation"/>
+        </copy>
     </target>
-    <!--
 
-    There exist several targets which are by default empty and which can be 
-    used for execution of your tasks. These targets are usually executed 
-    before and after some main targets. They are: 
-
-      -pre-init:                 called before initialization of project properties
-      -post-init:                called after initialization of project properties
-      -pre-compile:              called before javac compilation
-      -post-compile:             called after javac compilation
-      -pre-compile-single:       called before javac compilation of single file
-      -post-compile-single:      called after javac compilation of single file
-      -pre-compile-test:         called before javac compilation of JUnit tests
-      -post-compile-test:        called after javac compilation of JUnit tests
-      -pre-compile-test-single:  called before javac compilation of single JUnit test
-      -post-compile-test-single: called after javac compilation of single JUunit test
-      -pre-jar:                  called before JAR building
-      -post-jar:                 called after JAR building
-      -post-clean:               called after cleaning build products
-
-    (Targets beginning with '-' are not intended to be called on their own.)
-
-    Example of inserting an obfuscator after compilation could look like this:
-
-        <target name="-post-compile">
-            <obfuscate>
-                <fileset dir="${build.classes.dir}"/>
-            </obfuscate>
-        </target>
-
-    For list of available properties check the imported 
-    nbproject/build-impl.xml file. 
-
-
-    Another way to customize the build is by overriding existing main targets.
-    The targets of interest are: 
-
-      -init-macrodef-javac:     defines macro for javac compilation
-      -init-macrodef-junit:     defines macro for junit execution
-      -init-macrodef-debug:     defines macro for class debugging
-      -init-macrodef-java:      defines macro for class execution
-      -do-jar:                  JAR building
-      run:                      execution of project 
-      -javadoc-build:           Javadoc generation
-      test-report:              JUnit report generation
-
-    An example of overriding the target for project execution could look like this:
-
-        <target name="run" depends="KaraokeApp-impl.jar">
-            <exec dir="bin" executable="launcher.exe">
-                <arg file="${dist.jar}"/>
-            </exec>
-        </target>
-
-    Notice that the overridden target depends on the jar target and not only on 
-    the compile target as the regular run target does. Again, for a list of available 
-    properties which you can use, check the target you are overriding in the
-    nbproject/build-impl.xml file. 
-
-    -->
+    <target name="-post-jar-copy-files">
+        <copy todir="${dist.dir}" file="${basedir}/user_data.json"/>
+        <copy todir="${dist.dir}" file="${basedir}/transaksi.json"/>
+        <copy todir="${dist.dir}" file="${basedir}/song_data.dat"/>
+    </target>
+    
+    
 </project>
